--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
   },
   "dependencies": {
     "@pinia/nuxt": "^0.4.1",
-    "mdi": "^2.2.43",
+    "@mdi/font": "^2.2.43",
     "vuetify": "^3.0.0-beta.10"
   }
 }
