--- a/client/package.json
+++ b/client/package.json
@@ -1,27 +1,39 @@
 {
-  "private": true,
+  "name": "vue3-vite-ts-windi",
+  "version": "0.0.0",
   "scripts": {
-    "build": "nuxt build",
-    "dev": "nuxt dev",
-    "generate": "nuxt generate",
-    "preview": "nuxt preview"
-  },
-  "devDependencies": {
-    "@nuxtjs/tailwindcss": "^5.3.2",
-    "autoprefixer": "^10.4.8",
-    "eslint": "^8.23.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-nuxt": "^3.2.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "nuxt": "3.0.0-rc.9",
-    "postcss": "^8.4.16",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "sass": "^1.54.7"
+    "images": "docker-compose build --no-cache",
+    "up": "docker-compose up --force-recreate",
+    "down": "docker-compose down",
+    "reboot": "(yarn down && yarn images && yarn up)",
+    "test": "docker exec -it vue3-ts-pinia-windi yarn vitest",
+    "shell": "docker exec -it vue3-ts-pinia-windi bash",
+    "dev": "vite",
+    "build": "vue-tsc --noEmit && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "@pinia/nuxt": "^0.4.1",
-    "@mdi/font": "^2.2.43",
-    "vuetify": "^3.0.0-beta.10"
+    "firebase": "^9.11.0",
+    "pinia": "^2.0.0-rc.10",
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.12"
+  },
+  "devDependencies": {
+    "@types/node": "^17.0.21",
+    "@vitejs/plugin-vue": "^2.0.0",
+    "@vue/test-utils": "^2.0.0-rc.17",
+    "eslint": "^8.6.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-vue": "^8.2.0",
+    "jsdom": "^19.0.0",
+    "prettier": "2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.10",
+    "sass": "^1.49.8",
+    "typescript": "^4.4.4",
+    "vite": "^2.7.2",
+    "vite-plugin-windicss": "^1.6.1",
+    "vitest": "^0.7.6",
+    "vue-tsc": "^0.29.8",
+    "windicss": "^3.4.2"
   }
 }
