--- a/client/package.json
+++ b/client/package.json
@@ -2,25 +2,31 @@
   "name": "vue3-vite-ts-windi",
   "version": "0.0.0",
   "scripts": {
-    "images": "docker-compose build --no-cache",
-    "up": "docker-compose up --force-recreate",
-    "down": "docker-compose down",
-    "reboot": "(yarn down && yarn images && yarn up)",
-    "test": "docker exec -it vue3-ts-pinia-windi yarn vitest",
-    "shell": "docker exec -it vue3-ts-pinia-windi bash",
+    "serve": "vite preview",
+    "build": "vite build",
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "down": "docker-compose down",
+    "images": "docker-compose build --no-cache",
+    "preview": "vite preview",
+    "reboot": "(yarn down && yarn images && yarn up)",
+    "shell": "docker exec -it vue3-ts-pinia-windi bash",
+    "test": "docker exec -it vue3-ts-pinia-windi yarn vitest",
+    "up": "docker-compose up --force-recreate"
   },
   "dependencies": {
+    "@mdi/font": "5.9.55",
     "firebase": "^9.11.0",
     "pinia": "^2.0.0-rc.10",
+    "roboto-fontface": "*",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vuetify": "^3.0.0-beta.0",
+    "webfontloader": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.21",
-    "@vitejs/plugin-vue": "^2.0.0",
+    "@types/webfontloader": "^1.0.0",
+    "@vitejs/plugin-vue": "^3.0.3",
     "@vue/test-utils": "^2.0.0-rc.17",
     "eslint": "^8.6.0",
     "eslint-config-prettier": "^8.3.0",
@@ -30,9 +36,11 @@
     "prettier-plugin-tailwindcss": "^0.1.10",
     "sass": "^1.49.8",
     "typescript": "^4.4.4",
-    "vite": "^2.7.2",
+    "vite": "^3.0.8",
+    "vite-plugin-vuetify": "^1.0.0-alpha.12",
     "vite-plugin-windicss": "^1.6.1",
     "vitest": "^0.7.6",
+    "vue-cli-plugin-vuetify": "~2.5.8",
     "vue-tsc": "^0.29.8",
     "windicss": "^3.4.2"
   }
